Source/Alternet.UI.Pal/Api/Calendar.Api.h

using namespace Alternet::UI;
ALTERNET_UI_API Calendar* Calendar_Create_()
{
    return MarshalExceptions<Calendar*>([&](){
        return new Calendar();
    });
}
ALTERNET_UI_API c_bool Calendar_GetSundayFirst_(Calendar* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetSundayFirst();
    });
}
ALTERNET_UI_API void Calendar_SetSundayFirst_(Calendar* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetSundayFirst(value);
    });
}
ALTERNET_UI_API c_bool Calendar_GetMondayFirst_(Calendar* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetMondayFirst();
    });
}
ALTERNET_UI_API void Calendar_SetMondayFirst_(Calendar* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetMondayFirst(value);
    });
}
ALTERNET_UI_API c_bool Calendar_GetShowHolidays_(Calendar* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetShowHolidays();
    });
}
ALTERNET_UI_API void Calendar_SetShowHolidays_(Calendar* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetShowHolidays(value);
    });
}
ALTERNET_UI_API c_bool Calendar_GetNoYearChange_(Calendar* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetNoYearChange();
    });
}
ALTERNET_UI_API void Calendar_SetNoYearChange_(Calendar* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetNoYearChange(value);
    });
}
ALTERNET_UI_API c_bool Calendar_GetNoMonthChange_(Calendar* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetNoMonthChange();
    });
}
ALTERNET_UI_API void Calendar_SetNoMonthChange_(Calendar* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetNoMonthChange(value);
    });
}
ALTERNET_UI_API c_bool Calendar_GetSequentalMonthSelect_(Calendar* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetSequentalMonthSelect();
    });
}
ALTERNET_UI_API void Calendar_SetSequentalMonthSelect_(Calendar* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetSequentalMonthSelect(value);
    });
}
ALTERNET_UI_API c_bool Calendar_GetShowSurroundWeeks_(Calendar* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetShowSurroundWeeks();
    });
}
ALTERNET_UI_API void Calendar_SetShowSurroundWeeks_(Calendar* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetShowSurroundWeeks(value);
    });
}
ALTERNET_UI_API c_bool Calendar_GetShowWeekNumbers_(Calendar* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetShowWeekNumbers();
    });
}
ALTERNET_UI_API void Calendar_SetShowWeekNumbers_(Calendar* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetShowWeekNumbers(value);
    });
}
ALTERNET_UI_API c_bool Calendar_GetUseGeneric_(Calendar* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetUseGeneric();
    });
}
ALTERNET_UI_API void Calendar_SetUseGeneric_(Calendar* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetUseGeneric(value);
    });
}
ALTERNET_UI_API c_bool Calendar_GetHasBorder_(Calendar* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->GetHasBorder();
    });
}
ALTERNET_UI_API void Calendar_SetHasBorder_(Calendar* obj, c_bool value)
{
    MarshalExceptions<void>([&](){
        obj->SetHasBorder(value);
    });
}
ALTERNET_UI_API DateTime_C Calendar_GetValue_(Calendar* obj)
{
    return MarshalExceptions<DateTime_C>([&](){
        return obj->GetValue();
    });
}
ALTERNET_UI_API void Calendar_SetValue_(Calendar* obj, DateTime value)
{
    MarshalExceptions<void>([&](){
        obj->SetValue(value);
    });
}
ALTERNET_UI_API DateTime_C Calendar_GetMinValue_(Calendar* obj)
{
    return MarshalExceptions<DateTime_C>([&](){
        return obj->GetMinValue();
    });
}
ALTERNET_UI_API void Calendar_SetMinValue_(Calendar* obj, DateTime value)
{
    MarshalExceptions<void>([&](){
        obj->SetMinValue(value);
    });
}
ALTERNET_UI_API DateTime_C Calendar_GetMaxValue_(Calendar* obj)
{
    return MarshalExceptions<DateTime_C>([&](){
        return obj->GetMaxValue();
    });
}
ALTERNET_UI_API void Calendar_SetMaxValue_(Calendar* obj, DateTime value)
{
    MarshalExceptions<void>([&](){
        obj->SetMaxValue(value);
    });
}
ALTERNET_UI_API c_bool Calendar_SetRange_(Calendar* obj, c_bool useMinValue, c_bool useMaxValue)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->SetRange(useMinValue, useMaxValue);
    });
}
ALTERNET_UI_API void Calendar_SetHolidayColors_(Calendar* obj, Color colorFg, Color colorBg)
{
    MarshalExceptions<void>([&](){
        obj->SetHolidayColors(colorFg, colorBg);
    });
}
ALTERNET_UI_API Color_C Calendar_GetHolidayColorFg_(Calendar* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetHolidayColorFg();
    });
}
ALTERNET_UI_API Color_C Calendar_GetHolidayColorBg_(Calendar* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetHolidayColorBg();
    });
}
ALTERNET_UI_API int Calendar_HitTest_(Calendar* obj, PointI point)
{
    return MarshalExceptions<int>([&](){
        return obj->HitTest(point);
    });
}
ALTERNET_UI_API void Calendar_SetHeaderColors_(Calendar* obj, Color colorFg, Color colorBg)
{
    MarshalExceptions<void>([&](){
        obj->SetHeaderColors(colorFg, colorBg);
    });
}
ALTERNET_UI_API Color_C Calendar_GetHeaderColorFg_(Calendar* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetHeaderColorFg();
    });
}
ALTERNET_UI_API Color_C Calendar_GetHeaderColorBg_(Calendar* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetHeaderColorBg();
    });
}
ALTERNET_UI_API void Calendar_SetHighlightColors_(Calendar* obj, Color colorFg, Color colorBg)
{
    MarshalExceptions<void>([&](){
        obj->SetHighlightColors(colorFg, colorBg);
    });
}
ALTERNET_UI_API Color_C Calendar_GetHighlightColorFg_(Calendar* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetHighlightColorFg();
    });
}
ALTERNET_UI_API Color_C Calendar_GetHighlightColorBg_(Calendar* obj)
{
    return MarshalExceptions<Color_C>([&](){
        return obj->GetHighlightColorBg();
    });
}
ALTERNET_UI_API c_bool Calendar_AllowMonthChange_(Calendar* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->AllowMonthChange();
    });
}
ALTERNET_UI_API c_bool Calendar_EnableMonthChange_(Calendar* obj, c_bool enable)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->EnableMonthChange(enable);
    });
}
ALTERNET_UI_API void Calendar_Mark_(Calendar* obj, int day, c_bool mark)
{
    MarshalExceptions<void>([&](){
        obj->Mark(day, mark);
    });
}
ALTERNET_UI_API void* Calendar_GetAttr_(Calendar* obj, int day)
{
    return MarshalExceptions<void*>([&](){
        return obj->GetAttr(day);
    });
}
ALTERNET_UI_API void Calendar_SetAttr_(Calendar* obj, int day, void* calendarDateAttr)
{
    MarshalExceptions<void>([&](){
        obj->SetAttr(day, calendarDateAttr);
    });
}
ALTERNET_UI_API Color_C Calendar_DateAttrGetTextColor_(void* handle)
{
    return MarshalExceptions<Color_C>([&](){
        return Calendar::DateAttrGetTextColor(handle);
    });
}
ALTERNET_UI_API Color_C Calendar_DateAttrGetBackgroundColor_(void* handle)
{
    return MarshalExceptions<Color_C>([&](){
        return Calendar::DateAttrGetBackgroundColor(handle);
    });
}
ALTERNET_UI_API Color_C Calendar_DateAttrGetBorderColor_(void* handle)
{
    return MarshalExceptions<Color_C>([&](){
        return Calendar::DateAttrGetBorderColor(handle);
    });
}
ALTERNET_UI_API void* Calendar_DateAttrGetFont_(void* handle)
{
    return MarshalExceptions<void*>([&](){
        return Calendar::DateAttrGetFont(handle);
    });
}
ALTERNET_UI_API int Calendar_DateAttrGetBorder_(void* handle)
{
    return MarshalExceptions<int>([&](){
        return Calendar::DateAttrGetBorder(handle);
    });
}
ALTERNET_UI_API void Calendar_SetEventCallback_(Calendar::CalendarEventCallbackType callback)
{
    Calendar::SetEventCallback(callback);
}