Source/Alternet.UI/Native/Calendar.Generated.cs

        
        public static Alternet.Drawing.Color DateAttrGetTextColor(System.IntPtr handle)
        {
            return NativeApi.Calendar_DateAttrGetTextColor_(handle);
        }
        
        public static Alternet.Drawing.Color DateAttrGetBackgroundColor(System.IntPtr handle)
        {
            return NativeApi.Calendar_DateAttrGetBackgroundColor_(handle);
        }
        
        public static Alternet.Drawing.Color DateAttrGetBorderColor(System.IntPtr handle)
        {
            return NativeApi.Calendar_DateAttrGetBorderColor_(handle);
        }
        
        public static System.IntPtr DateAttrGetFont(System.IntPtr handle)
        {
            return NativeApi.Calendar_DateAttrGetFont_(handle);
        }
        
        public static int DateAttrGetBorder(System.IntPtr handle)
        {
            return NativeApi.Calendar_DateAttrGetBorder_(handle);
        }
        
        static GCHandle eventCallbackGCHandle;
        public static Calendar? GlobalObject;
        
        static void SetEventCallback()
        {
            if (!eventCallbackGCHandle.IsAllocated)
            {
                var sink = new NativeApi.CalendarEventCallbackType((obj, e, parameter) =>
                    UI.Application.HandleThreadExceptions(() =>
                    {
                        var w = NativeObject.GetFromNativePointer<Calendar>(obj, p => new Calendar(p));
                        w ??= GlobalObject;
                        if (w == null) return IntPtr.Zero;
                        return w.OnEvent(e, parameter);
                    }
                    )
                );
                eventCallbackGCHandle = GCHandle.Alloc(sink);
                NativeApi.Calendar_SetEventCallback_(sink);
            }
        }
        
        IntPtr OnEvent(NativeApi.CalendarEvent e, IntPtr parameter)
        {
            switch (e)
            {
                case NativeApi.CalendarEvent.SelectionChanged:
                {
                    OnPlatformEventSelectionChanged(); return IntPtr.Zero;
                }
                case NativeApi.CalendarEvent.PageChanged:
                {
                    OnPlatformEventPageChanged(); return IntPtr.Zero;
                }
                case NativeApi.CalendarEvent.WeekNumberClick:
                {
                    OnPlatformEventWeekNumberClick(); return IntPtr.Zero;
                }
                case NativeApi.CalendarEvent.DayHeaderClick:
                {
                    OnPlatformEventDayHeaderClick(); return IntPtr.Zero;
                }
                case NativeApi.CalendarEvent.DayDoubleClick:
                {
                    OnPlatformEventDayDoubleClick(); return IntPtr.Zero;
                }
                default: throw new Exception("Unexpected CalendarEvent value: " + e);
            }
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [UnmanagedFunctionPointer(CallingConvention.Cdecl)]
            public delegate IntPtr CalendarEventCallbackType(IntPtr obj, CalendarEvent e, IntPtr param);
            
            public enum CalendarEvent
            {
                SelectionChanged,
                PageChanged,
                WeekNumberClick,
                DayHeaderClick,
                DayDoubleClick,
            }
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetEventCallback_(CalendarEventCallbackType callback);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr Calendar_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Calendar_GetSundayFirst_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetSundayFirst_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Calendar_GetMondayFirst_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetMondayFirst_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Calendar_GetShowHolidays_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetShowHolidays_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Calendar_GetNoYearChange_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetNoYearChange_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Calendar_GetNoMonthChange_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetNoMonthChange_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Calendar_GetSequentalMonthSelect_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetSequentalMonthSelect_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Calendar_GetShowSurroundWeeks_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetShowSurroundWeeks_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Calendar_GetShowWeekNumbers_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetShowWeekNumbers_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Calendar_GetUseGeneric_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetUseGeneric_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Calendar_GetHasBorder_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetHasBorder_(IntPtr obj, bool value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.DateTime Calendar_GetValue_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetValue_(IntPtr obj, NativeApiTypes.DateTime value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.DateTime Calendar_GetMinValue_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetMinValue_(IntPtr obj, NativeApiTypes.DateTime value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.DateTime Calendar_GetMaxValue_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetMaxValue_(IntPtr obj, NativeApiTypes.DateTime value);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Calendar_SetRange_(IntPtr obj, bool useMinValue, bool useMaxValue);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetHolidayColors_(IntPtr obj, NativeApiTypes.Color colorFg, NativeApiTypes.Color colorBg);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.Color Calendar_GetHolidayColorFg_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.Color Calendar_GetHolidayColorBg_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int Calendar_HitTest_(IntPtr obj, Alternet.Drawing.PointI point);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetHeaderColors_(IntPtr obj, NativeApiTypes.Color colorFg, NativeApiTypes.Color colorBg);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.Color Calendar_GetHeaderColorFg_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.Color Calendar_GetHeaderColorBg_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetHighlightColors_(IntPtr obj, NativeApiTypes.Color colorFg, NativeApiTypes.Color colorBg);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.Color Calendar_GetHighlightColorFg_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern NativeApiTypes.Color Calendar_GetHighlightColorBg_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Calendar_AllowMonthChange_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool Calendar_EnableMonthChange_(IntPtr obj, bool enable);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_Mark_(IntPtr obj, int day, bool mark);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr Calendar_GetAttr_(IntPtr obj, int day);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void Calendar_SetAttr_(IntPtr obj, int day, System.IntPtr calendarDateAttr);
